# GameOfLife

./: CMakeLists.txt  README.md  main.cpp  test.txt
